--- a/src/main/resources/templates/user/home/index.html
+++ b/src/main/resources/templates/user/home/index.html
@@ -318,7 +318,7 @@
                         <div id="pending-list" th:replace="~{fragments/pendingList :: pending-list}"></div>
                     </div>
                 </div>
-                <div id="myFavorites" th:if="${userEppn == authUserEppn && (workflows.size() > 0 || forms.size() > 0)}" class="alert rounded-3 border-secondary-subtle d-flex flex-row gap-2 d-flex flex-column border-end pe-xxl-3 w-100 w-75-l" style="max-width: 100%;">
+                <div id="myFavorites" th:if="${userEppn == authUserEppn && (workflows.size() > 0 || forms.size() > 0 || featuredWorkflows.size() > 0)}" class="alert rounded-3 border-secondary-subtle d-flex flex-row gap-2 d-flex flex-column border-end pe-xxl-3 w-100 w-75-l" style="max-width: 100%;">
                     <div th:insert="~{fragments/new-featured :: new-featured}" th:if="${featuredWorkflows.size() > 0}"></div>
                     <div class="w-100"  th:if="${workflows.size() > 0}">
                         <div class="d-flex align-items-center w-100 gap-2">
