--- a/src/main/resources/templates/user/signbooks/update.html
+++ b/src/main/resources/templates/user/signbooks/update.html
@@ -24,7 +24,7 @@
                     </li>
                     <li>
                         <a title="Ajouter une étape au circuit" role="button" data-bs-toggle="modal" data-bs-target="#addStep" class="btn-floating btn-lg bg-primary float-end">
-                            <i class="fi-rr-workflow-setting fa-2xl" style="margin-top: 10px;"></i>
+                            <i class="fi fi-rr-workflow-setting fa-2xl" style="margin-top: 10px;"></i>
                         </a>
                     </li>
                     <li>
