--- a/src/main/resources/templates/admin/currentsessions.html
+++ b/src/main/resources/templates/admin/currentsessions.html
@@ -40,7 +40,7 @@
                     </tr>
                     </thead>
                     <tbody id="signRequestTable">
-                    <tr th:each="httpSession : ${httpSessions}" th:class="${httpSession.userEppn == null && httpSession.originRequestUri != '/login/casentry'} ? 'table-danger' : ''">
+                    <tr th:if="${httpSession.userEppn != null}" th:each="httpSession : ${httpSessions}" th:class="${httpSession.userEppn == null && httpSession.originRequestUri != '/login/casentry'} ? 'table-secondary' : ''">
                         <!--/*@thymesVar id="httpSession" type="org.springframework.session.MapSession"*/-->
                         <td th:if="${httpSession.userEppn != null}">
                             <input type="text" th:value="${httpSession.userEppn}" disabled>
