--- a/src/main/resources/templates/admin/currentsessions.html
+++ b/src/main/resources/templates/admin/currentsessions.html
@@ -23,6 +23,26 @@
                     <br>
                     <span th:text="${httpSessionsAlive.size()} + ' session(s) live'"></span>
                 </div>
+                <button id="toggleAnonymous" class="btn btn-sm btn-secondary">
+                    <i class="fa-solid fa-eye-slash"></i> Afficher les sessions anonymes
+                </button>
+
+                <script>
+                    $(document).ready(function() {
+                        let isHidden = true;
+
+                        $('#toggleAnonymous').click(function() {
+                            $('tr.table-secondary').toggleClass('d-none');
+
+                            isHidden = !isHidden;
+                            const icon = isHidden ? 'fa-eye-slash' : 'fa-eye';
+                            const text = isHidden ? 'Afficher les sessions anonymes' : 'Masquer les sessions anonymes';
+
+                            $(this).find('i').attr('class', `fa-solid ${icon}`);
+                            $(this).html(`<i class="fa-solid ${icon}"></i> ${text}`);
+                        });
+                    });
+                </script>
             </div>
             <div class="table-fix-head scrollbar-style rounded-3 col-sm-9 col-md-10 col-xl-11 p-0 m-2" style="height: calc(100vh - 230px);">
                 <table class="table table-hover table-responsive">
@@ -32,7 +52,7 @@
                         <th>Session ID</th>
                         <th>Creation time</th>
                         <th>Remote Ip</th>
-                        <th>Url d'origine</th>
+                        <th style="width: 300px;">Url d'origine</th>
                         <th>Last access time</th>
                         <th>Inactif depuis</th>
                         <th>Alive</th>
@@ -40,7 +60,7 @@
                     </tr>
                     </thead>
                     <tbody id="signRequestTable">
-                    <tr th:if="${httpSession.userEppn != null}" th:each="httpSession : ${httpSessions}" th:class="${httpSession.userEppn == null && httpSession.originRequestUri != '/login/casentry'} ? 'table-secondary' : ''">
+                    <tr th:each="httpSession : ${httpSessions}" th:class="${httpSession.userEppn == null && httpSession.originRequestUri != '/login/casentry'} ? 'table-secondary d-none' : ''">
                         <!--/*@thymesVar id="httpSession" type="org.springframework.session.MapSession"*/-->
                         <td th:if="${httpSession.userEppn != null}">
                             <input type="text" th:value="${httpSession.userEppn}" disabled>
