help manager role

--- a/src/main/resources/templates/admin/roles-managers.html
+++ b/src/main/resources/templates/admin/roles-managers.html
@@ -20,9 +20,12 @@
                     <i class="fa-solid fa-plus fa-2xl"></i>
                 </a>
             </div>
-            <div class="card col-lg-10 mx-auto">
+            <div class="card col-lg-11">
                 <div class="card-body">
                     <h5 class="text-center"><b>Gestionnaires de rôles</b></h5>
+                    <div class="alert alert-secondary mb-2">
+                        Ici, vous pouvez déclarer des utilisateurs autorisés à créer des circuits et des formulaires à destinations des certains rôles. Seules les personnes ayant le rôle correspondant, pourront acceder aux circuits et formulaires créés pas le gestionnaire
+                    </div>
                     <table class="table table-borderless table-hover">
                         <thead class="table-secondary">
                         <tr>
