--- a/src/main/resources/templates/admin/tags/list.html
+++ b/src/main/resources/templates/admin/tags/list.html
@@ -18,6 +18,9 @@
             <div class="card mb-1 mx-auto">
                 <div class="card-body">
                     <h5 class="text-center"><b>Tags</b></h5>
+                    <div class="alert alert-secondary mb-2">
+                        Ici, vous pouvez créer des tags (mot + couleur) afin de catégoriser vos circuits et vos formulaires.
+                    </div>
                     <table class="table table-sm table-hover">
                         <thead class="table-secondary">
                         <tr>
