--- a/src/main/resources/templates/admin/messages.html
+++ b/src/main/resources/templates/admin/messages.html
@@ -23,6 +23,9 @@
             <div class="card col-lg-10 mx-auto">
                 <div class="card-body">
                     <h5 class="text-center"><b>Messages</b></h5>
+                    <div class="alert alert-secondary mb-2">
+                        Ici, vous pouvez ajouter gbvv
+                    </div>
                     <table class="table table-borderless table-hover">
                         <thead class="table-secondary">
                         <tr>
