fix mass download + reports

--- a/src/main/resources/templates/admin/messages.html
+++ b/src/main/resources/templates/admin/messages.html
@@ -24,7 +24,7 @@
                 <div class="card-body">
                     <h5 class="text-center"><b>Messages</b></h5>
                     <div class="alert alert-secondary mb-2">
-                        Ici, vous pouvez ajouter gbvv
+                        Ici, vous pouvez ajouter un message qui sera affiché aux utilisateurs.
                     </div>
                     <table class="table table-borderless table-hover">
                         <thead class="table-secondary">
