--- a/src/main/resources/templates/fragments/footer-light.html
+++ b/src/main/resources/templates/fragments/footer-light.html
@@ -6,4 +6,5 @@
 			<span th:text="#{application.footer}"></span> - <span th:text="${#dates.year(#dates.createNow())}"></span> | <a class="text-white" href="/user">Accueil</a> | <a class="text-white" href="/rgpd">Données personnelles</a> | <a class="text-white" href="/rgaa" th:text="#{rgaa.title}"></a>
 		</footer>
 	</div>
+</div>
 </html>
