--- a/src/main/resources/templates/user/manage/details.html
+++ b/src/main/resources/templates/user/manage/details.html
@@ -52,7 +52,7 @@
                                 <option value="all">Tout</option>
                             </select>
                         </th>
-                        <th class="d-none d-xxl-table-cell">
+                        <th class="d-none d-lg-table-cell">
                             <select id="creatorFilter" class="auto-select-users sign-request-filter" data-es-check-cert="false" data-placeholder="Créateur" data-allow-deselect="true">
                                 <option data-placeholder="true"></option>
                                 <option value="all">Tout</option>
@@ -64,13 +64,13 @@
                                 <a class="sorted my-auto text-center ms-1" sd:pagination-sort="createDate"><i class="fa-solid fa-sort"></i></a>
                             </div>
                         </th>
-                        <th class="d-none d-xl-table-cell">
+                        <th class="d-none d-lg-table-cell">
                             <select id="recipientsFilter" class="auto-select-users sign-request-filter" data-es-check-cert="false" data-placeholder="Participants" data-allow-deselect="true">
                                 <option data-placeholder="true"></option>
                                 <option value="all">Tout</option>
                             </select>
                         </th>
-                        <th class="d-none d-xxxl-table-cell"><a class="sorted" sd:pagination-sort="endDate">Date dernière modification</a></th>
+                        <th class="d-none d-xxl-table-cell"><a class="sorted" sd:pagination-sort="endDate">Date dernière modification</a></th>
                         <th class="d-none d-md-table-cell">
                             <div class="d-flex text-center">
                             <select class="slim-select-filter sign-request-filter" name="statusFilter" id="statusFilter" onchange="submit();">
