--- a/src/main/resources/templates/user/signrequests/includes/workspace.html
+++ b/src/main/resources/templates/user/signrequests/includes/workspace.html
@@ -98,20 +98,19 @@
                         <button es-modal-style="bg-success" id="reportModalBtn" class="btn btn-sm btn-dark d-none" data-bs-toggle="modal" data-bs-target="#reportModal">Voir la signature</button>
                     </span>
                     <span style="line-height: 33px;" th:if="${signatureIssue}">
-                        <script>
-                            displayPdfAlertsBtn.append('<i class="fa-solid fa-circle-exclamation text-secondary" title="Signature électronique présente sur le document"></i>');
-                            displayPdfAlertsDropdown.removeClass("d-none");
-                            displayPdfAlertsBtn.click();
-
-                        </script>
                         <div>
                             <i class="fa-solid fa-circle-exclamation text-secondary"></i> Ce document contient une signature qui, bien que techniquement conforme, n’a pas pu être qualifiée par le système de signature.
-                        <div id="reportSpinner" class="spinner-border" role="status" style="width: 1rem; height: 1rem;">
+                            <div id="reportSpinner" class="spinner-border" role="status" style="width: 1rem; height: 1rem;">
                             <span class="sr-only">En cours...</span>
-                        </div>
-                        <button es-modal-style="bg-warning" id="reportModalBtn" class="btn btn-sm btn-dark d-none" data-bs-toggle="modal" data-bs-target="#reportModal">Voir la/les signature(s)</button>
+                            </div>
+                            <button es-modal-style="bg-warning" id="reportModalBtn" class="btn btn-sm btn-dark d-none" data-bs-toggle="modal" data-bs-target="#reportModal">Voir la/les signature(s)</button>
                         </div>
                     </span>
+                    <script th:if="${signatureIds.size() >= 1}">
+                        displayPdfAlertsBtn.append('<i class="fa-solid fa-circle-exclamation text-secondary" title="Signature électronique présente sur le document"></i>');
+                        displayPdfAlertsDropdown.removeClass("d-none");
+                        displayPdfAlertsBtn.click();
+                    </script>
                 </div>
                 <div id="warningPdfA" title="Masquer ce message"
                     class="alert bg-light warning d-flex align-items-center justify-content-between"
