--- a/src/main/resources/templates/fragments/pendingList.html
+++ b/src/main/resources/templates/fragments/pendingList.html
@@ -16,7 +16,7 @@
                 <th:block th:each="signBook : ${pendingSignBooks}">
                     <tr th:if="${signBook.signRequests.size() > 0}" th:title="${signBook.description}" th:data-href="'/user/signrequests/' + ${signBook.signRequests.get(0).id}" th:class="${signBook.signRequests.size() < 2} ? 'clickable-row'" data-bs-toggle="collapse" th:data-bs-target="'#row_' + ${signBook.id}" th:with="signRequest = ${signBook.signRequests.get(0)}" style="font-size: clamp(0.75rem, 1.2vw, 0.875rem);">
                         <td>
-                            <div class="d-flex flex-row align-items-center justify-content-around gap-1">
+                            <div class="d-flex flex-row align-items-center justify-content-between gap-1">
                                 <i th:unless="${signRequest.viewedBy.contains(user)}" class="fa-solid fa-circle fa-2xs text-danger" title="Le document n'a pas été lu jusqu'à la dernière page"></i>
                                 <i th:if="${signRequest.viewedBy.contains(user)}" class="fa-solid fa-circle fa-2xs text-light" title="Le document a été lu jusqu'à la dernière page"></i>
                                 <i th:unless="${signRequest.attachments.isEmpty()}" class="fa-solid fa-paperclip fa-xs text-dark" title="La demande contient des pièces jointes"></i>
